--- a/site/analytics.html
+++ b/site/analytics.html
@@ -425,7 +425,7 @@
                 <div class="date">Добавлена: 10 сентября 2014</div>
                 <div class="comments"><a href="#">51</a></div>
                 <div class="views">2726</div>
-                <div class="irating irating_fl">
+                <div class="irating irating_dib">
                   <ul>
                     <li class="star"></li>
                     <li class="star"></li>
