--- a/site/articles.html
+++ b/site/articles.html
@@ -434,7 +434,7 @@
                     <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                     <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -460,7 +460,7 @@
                     <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Интересный длинный тег</span><span class="count empty"></span></a></div>
                     <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -486,7 +486,7 @@
                     <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                     <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -512,7 +512,7 @@
                     <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Интересный длинный тег</span><span class="count empty"></span></a></div>
                     <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -538,7 +538,7 @@
                     <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                     <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -564,7 +564,7 @@
                     <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Интересный длинный тег</span><span class="count empty"></span></a></div>
                     <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
