--- a/site/disscus.html
+++ b/site/disscus.html
@@ -432,7 +432,7 @@
                     <div class="left-grey">Обновлено 19 октября 2014 в 18:48 <a href="#">Константином Заруцким</a></div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -471,7 +471,7 @@
                     <div class="left-grey">Обновлено 19 октября 2014 в 18:48 <a href="#">Константином Заруцким</a></div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -511,7 +511,7 @@
                     <div class="left-grey">Обновлено 19 октября 2014 в 18:48 <a href="#">Константином Заруцким</a></div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -550,7 +550,7 @@
                     <div class="left-grey">Обновлено 19 октября 2014 в 18:48 <a href="#">Константином Заруцким</a></div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
