--- a/site/docs-item.html
+++ b/site/docs-item.html
@@ -397,7 +397,16 @@
             <div class="box-doc-item">
               <div class="bmeta">
                 <div class="date">19 сентября 2014 года</div>
-                <div class="views">2726</div>
+                <div class="comments"><a href="#">123</a></div>
+                <div class="date">
+                   
+                  Количество комментариев: <a href="#">13</a>
+                </div>
+                <div class="date views">2726</div>
+                <div class="date">
+                   
+                  Количество скачиваний: 13
+                </div>
               </div>
               <div class="bname">
                 <h1>Свидетельство о государственной  <br>регистрации программы для ЭВМ</h1>
