--- a/site/edit-interface.html
+++ b/site/edit-interface.html
@@ -424,10 +424,10 @@
                                           <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
                                           <div class="articles__item-info">
                                             <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                            <div class="articles__item-title">Текстильный импортозамещающий комплекс появится в Ростовской области</div>
-                                            <div class="imeta articles__item-stats">
+                                            <div class="articles__item-title mar-bot-10">Текстильный импортозамещающий комплекс появится в Ростовской области</div>
+                                            <div class="bmeta">
                                               <div class="comments"><a href="#">51</a></div>
-                                              <div class="views"><a href="#">225</a></div>
+                                              <div class="views">225</div>
                                             </div>
                                           </div>
                                           <ul class="articles__item-controls inline">
@@ -489,10 +489,10 @@
                                           <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
                                           <div class="articles__item-info">
                                             <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                            <div class="articles__item-title">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
-                                            <div class="imeta articles__item-stats">
+                                            <div class="articles__item-title mar-bot-10">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
+                                            <div class="bmeta">
                                               <div class="comments"><a href="#">51</a></div>
-                                              <div class="views"><a href="#">225</a></div>
+                                              <div class="views">225</div>
                                             </div>
                                           </div>
                                           <ul class="articles__item-controls inline">
@@ -569,10 +569,10 @@
                                           <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
                                           <div class="articles__item-info">
                                             <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                            <div class="articles__item-title">Текстильный импортозамещающий комплекс появится в Ростовской области</div>
-                                            <div class="imeta articles__item-stats">
+                                            <div class="articles__item-title mar-bot-10">Текстильный импортозамещающий комплекс появится в Ростовской области</div>
+                                            <div class="bmeta">
                                               <div class="comments"><a href="#">51</a></div>
-                                              <div class="views"><a href="#">225</a></div>
+                                              <div class="views">225</div>
                                             </div>
                                           </div>
                                           <ul class="articles__item-controls inline">
@@ -634,10 +634,10 @@
                                           <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
                                           <div class="articles__item-info">
                                             <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                            <div class="articles__item-title">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
-                                            <div class="imeta articles__item-stats">
+                                            <div class="articles__item-title mar-bot-10">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
+                                            <div class="bmeta">
                                               <div class="comments"><a href="#">51</a></div>
-                                              <div class="views"><a href="#">225</a></div>
+                                              <div class="views">225</div>
                                             </div>
                                           </div>
                                           <ul class="articles__item-controls inline">
@@ -714,10 +714,10 @@
                                           <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
                                           <div class="articles__item-info">
                                             <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                            <div class="articles__item-title">Текстильный импортозамещающий комплекс появится в Ростовской области</div>
-                                            <div class="imeta articles__item-stats">
+                                            <div class="articles__item-title mar-bot-10">Текстильный импортозамещающий комплекс появится в Ростовской области</div>
+                                            <div class="bmeta">
                                               <div class="comments"><a href="#">51</a></div>
-                                              <div class="views"><a href="#">225</a></div>
+                                              <div class="views">225</div>
                                             </div>
                                           </div>
                                           <ul class="articles__item-controls inline">
@@ -779,10 +779,10 @@
                                           <div class="articles__item-thumb"><img src="img/content/edit-page/1.png" alt=""></div>
                                           <div class="articles__item-info">
                                             <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                            <div class="articles__item-title">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
-                                            <div class="imeta articles__item-stats">
+                                            <div class="articles__item-title mar-bot-10">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
+                                            <div class="bmeta">
                                               <div class="comments"><a href="#">51</a></div>
-                                              <div class="views"><a href="#">225</a></div>
+                                              <div class="views">225</div>
                                             </div>
                                           </div>
                                           <ul class="articles__item-controls inline">
