--- a/site/equipments-static.html
+++ b/site/equipments-static.html
@@ -411,10 +411,10 @@
                               <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                <div class="articles__item-title">Короткое название</div>
-                                <div class="imeta articles__item-stats">
+                                <div class="articles__item-title mar-bot-10">Короткое название</div>
+                                <div class="bmeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <ul class="admin-box admin-box_line-padding">
@@ -477,10 +477,10 @@
                               <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                <div class="articles__item-title">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
-                                <div class="imeta articles__item-stats">
+                                <div class="articles__item-title mar-bot-10">ВИИФ-2014 является крупнейшей многоотраслевой выставкой</div>
+                                <div class="bmeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <ul class="admin-box admin-box_line-padding">
@@ -543,10 +543,10 @@
                               <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                <div class="articles__item-title">ВИИФ-2014</div>
-                                <div class="imeta articles__item-stats">
+                                <div class="articles__item-title mar-bot-10">ВИИФ-2014</div>
+                                <div class="bmeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <ul class="admin-box admin-box_line-padding">
@@ -609,10 +609,10 @@
                               <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                <div class="articles__item-title">Lorem ipsum.</div>
-                                <div class="imeta articles__item-stats">
+                                <div class="articles__item-title mar-bot-10">Lorem ipsum.</div>
+                                <div class="bmeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <ul class="admin-box admin-box_line-padding">
@@ -675,10 +675,10 @@
                               <div class="articles__item-thumb"><a href="img/content/640-360-1.jpg" data-lightbox="image-1" data-title="Станок токарный с ЧПУ"><img src="img/content/edit-page/1.png" alt=""></a></div>
                               <div class="articles__item-info">
                                 <div class="articles__item-date-added">Добавлен: 13 октября 2012</div>
-                                <div class="articles__item-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum rem, vitae culpa consectetur vero odit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur fuga cumque rem aliquam fugiat, qui esse iste ab dicta sunt, a incidunt non magnam, adipisci, voluptates. Porro beatae veniam dolor.</div>
-                                <div class="imeta articles__item-stats">
+                                <div class="articles__item-title mar-bot-10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum rem, vitae culpa consectetur vero odit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur fuga cumque rem aliquam fugiat, qui esse iste ab dicta sunt, a incidunt non magnam, adipisci, voluptates. Porro beatae veniam dolor.</div>
+                                <div class="bmeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <ul class="admin-box admin-box_line-padding">
