--- a/site/events.html
+++ b/site/events.html
@@ -415,7 +415,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -434,7 +434,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -458,7 +458,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -477,7 +477,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -496,7 +496,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -515,7 +515,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
