--- a/site/info.html
+++ b/site/info.html
@@ -474,7 +474,7 @@
                     <div class="date">10 сентября 2014</div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -489,7 +489,7 @@
                     <div class="date">10 сентября 2014</div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -504,7 +504,7 @@
                     <div class="date">10 сентября 2014</div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -519,7 +519,7 @@
                     <div class="date">10 сентября 2014</div>
                     <div class="right">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -579,7 +579,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -590,7 +590,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -601,7 +601,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
