--- a/site/ntp.html
+++ b/site/ntp.html
@@ -440,7 +440,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -471,7 +471,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -502,7 +502,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -533,7 +533,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
