--- a/site/organizations.html
+++ b/site/organizations.html
@@ -453,7 +453,7 @@
                                 </div>
                                 <div class="imeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <div class="l-boxgrey js-object-con">
@@ -766,7 +766,7 @@
                                 </div>
                                 <div class="imeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <div class="l-boxgrey js-object-con">
@@ -1079,7 +1079,7 @@
                                 </div>
                                 <div class="imeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <div class="l-boxgrey js-object-con">
@@ -1392,7 +1392,7 @@
                                 </div>
                                 <div class="imeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <div class="l-boxgrey js-object-con">
@@ -1705,7 +1705,7 @@
                                 </div>
                                 <div class="imeta">
                                   <div class="comments"><a href="#">51</a></div>
-                                  <div class="views"><a href="#">225</a></div>
+                                  <div class="views">225</div>
                                 </div>
                               </div>
                               <div class="l-boxgrey js-object-con">
