--- a/site/requirements.html
+++ b/site/requirements.html
@@ -438,7 +438,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -465,7 +465,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -492,7 +492,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -519,7 +519,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -546,7 +546,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -573,7 +573,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -600,7 +600,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -627,7 +627,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -656,7 +656,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -683,7 +683,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -710,7 +710,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -737,7 +737,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -764,7 +764,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -791,7 +791,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -818,7 +818,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -845,7 +845,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -874,7 +874,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -903,7 +903,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -930,7 +930,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -957,7 +957,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -984,7 +984,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -1011,7 +1011,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -1038,7 +1038,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -1065,7 +1065,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
@@ -1092,7 +1092,7 @@
                                       <div class="imeta"><a href="#" class="btn-add">Предложить решение</a>
                                         <div class="right">
                                           <div class="comments"><a href="#">51</a></div>
-                                          <div class="views"><a href="#">225	</a></div>
+                                          <div class="views">225</div>
                                         </div>
                                       </div>
                                     </div>
