--- a/site/results.html
+++ b/site/results.html
@@ -428,7 +428,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -450,7 +450,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -472,7 +472,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -494,7 +494,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
