--- a/site/story-item.html
+++ b/site/story-item.html
@@ -531,7 +531,7 @@
                       <div class="imore"><a href="#">Читать полностью</a></div>
                       <div class="imeta">
                         <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="views">225</div>
                       </div>
                     </div>
                   </div>
@@ -541,7 +541,7 @@
                       <div class="iname"> <a href="#">Ученые объяснили смертельную опасность ветряных турбин для летучих мышей</a></div>
                       <div class="imeta">
                         <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="views">225</div>
                       </div>
                     </div>
                     <div class="item">
@@ -549,7 +549,7 @@
                       <div class="iname"> <a href="#">Текстильный импортозамещающий комплекс появится в Ростовской области</a></div>
                       <div class="imeta">
                         <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="views">225</div>
                       </div>
                     </div>
                     <div class="item">
@@ -557,7 +557,7 @@
                       <div class="iname"> <a href="#">Ученые объяснили смертельную </a></div>
                       <div class="imeta">
                         <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="views">225</div>
                       </div>
                     </div>
                   </div>
@@ -765,7 +765,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -776,7 +776,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -787,7 +787,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -798,7 +798,7 @@
                     <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
                     <div class="imeta">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
