--- a/site/equipments.html
+++ b/site/equipments.html
@@ -433,7 +433,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -460,7 +460,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -487,7 +487,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
@@ -514,7 +514,7 @@
                   <div class="imeta">
                     <div class="right mar-top-20m">
                       <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
+                      <div class="views">225</div>
                     </div>
                   </div>
                 </div>
