--- a/site/lk-new-public.html
+++ b/site/lk-new-public.html
@@ -748,7 +748,7 @@
                       <div class="left-grey">Обновлено 19 октября 2014 в 18:48 <a href="#">Константином Заруцким</a></div>
                       <div class="right">
                         <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="views">225</div>
                       </div>
                     </div>
                   </div>
