--- a/site/programs.html
+++ b/site/programs.html
@@ -433,7 +433,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -459,7 +459,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -485,7 +485,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -511,7 +511,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -537,7 +537,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
@@ -563,7 +563,7 @@
                                 <div class="imeta">
                                   <div class="right mar-top-20m">
                                     <div class="comments"><a href="#">51</a></div>
-                                    <div class="views"><a href="#">225</a></div>
+                                    <div class="views">225</div>
                                   </div>
                                 </div>
                               </div>
